--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,12 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y build-essential cppcheck
-      - name: Static analysis
-        run: cppcheck --enable=all --error-exitcode=1 src
+          - name: Static analysis
+      run: >
+        cppcheck --enable=all
+                 --suppress=missingIncludeSystem
+                 --error-exitcode=1
+                 src
       - name: Build & unit-test
         run: |
           mkdir -p build
