--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,8 @@ jobs:
           sudo apt-get install -y build-essential cppcheck
 
       - name: Static analysis
-        run: >
-          cppcheck --enable=all
-                   --suppress=missingIncludeSystem
-                   --error-exitcode=1
-                   src
+        run: cppcheck --enable=all --suppress=missingIncludeSystem --error-exitcode=1 .
+
 
       - name: Build & unit-test
         run: |
